--- a/template/layout.html
+++ b/template/layout.html
@@ -48,27 +48,49 @@
     .page{
       height: 100vh;
     }
+    /* 设置表格容器的固定高度并启用滚动 */
+    .table-wrapper {
+      height: 300px; /* 固定高度 */
+      width: 120%;
+      overflow-y: auto; /* 启用垂直滚动 */
+      border: 1px solid #dee2e6; /* 表格边框 */
+    }
+    /* 让表格表头固定在顶部 */
+    .table thead th {
+      position: sticky;
+      top: 0;
+      background-color: rgb(156, 142, 142);
+      z-index: 1;
+    }
+    .chart{
+        margin-top: 20px;
+    }
   </style>
 </head>
 <body>
   <div class="container-fluid">
-    <div class="sidebar">
-      <a href="#" data-target="page1" class="sidebar-link">Dashboard</a>
-      <a href="#submenu1" data-bs-toggle="collapse" class="sidebar-link">Settings</a>
+    <div class="sidebar col-md-2">
+      <a href="#submenu1" data-bs-toggle="collapse" class="sidebar-link">Dashboard</a>
+      <div class="collapse show submenu" id="submenu1">
+        <a href="#" data-target="page2" class="sidebar-link active">Profile Settings</a>
+        <a href="#" data-target="page3" class="sidebar-link">Account Settings</a>
+      </div>
+
+      <a href="#submenu2" data-bs-toggle="collapse" class="sidebar-link">Settings</a>
     <!-- 子菜单 -->
-      <div class="collapse submenu" id="submenu1">
+      <div class="collapse submenu" id="submenu2">
         <a href="#" data-target="page2" class="sidebar-link">Profile Settings</a>
         <a href="#" data-target="page3" class="sidebar-link">Account Settings</a>
       </div>
       <a href="#" data-target="page4" class="sidebar-link">Help</a>
     </div>
 
-    <div class="content ">
+    <div class="content col-md-8 offset-md-2">
       <div id="page1" class="page">
 <!--        <h1>Dashboard</h1>-->
 <!--        <p>Welcome to the dashboard!</p>-->
-        <div>{{chart}}</div>
-        <div>{{table}}</div>
+        <div class="chart">{{chart}}</div>
+        <div class="table-data">{{table}}</div>
       </div>
       <div id="page2" class="page d-none">
         <h1>Profile Settings</h1>
@@ -89,13 +111,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    $(document).ready(function() {
-      // 侧边栏滑动折叠
-      $('#toggleSidebar').on('click', function() {
-        $('.sidebar').toggleClass('collapsed');
-        $('.content').toggleClass('collapsed');
-      });
-
+    $(function() {
       // 菜单点击事件，显示相应内容并高亮
       $('.sidebar-link').on('click', function(event) {
         event.preventDefault();
