--- a/template/table_template.html
+++ b/template/table_template.html
@@ -2,7 +2,7 @@
   <h2>Fixed Height Scrollable Table</h2>
 
   <div class="table-wrapper">
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover table-sm">
       <thead>
         <tr>
           {% for thead in theads %}
